Bug 1148855 - Set overflow:hidden on scrollbar tracks so that layerization knows that the scrollbar thumb won't leave the scrollbar. r=roc
UltraBlame original commit: b50e39d915f3e3c4ff917f1a8de54e7212c1f491

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -976,6 +976,14 @@ grippy {
 
 
 
+slider {
+  
+
+  overflow: hidden;
+}
+
+
+
 scrollbox {
   -moz-binding: url("chrome://global/content/bindings/scrollbox.xml#scrollbox");
   
